--- a/src/app/components/asignacion-fechas/asignacion-fechas.component.scss
+++ b/src/app/components/asignacion-fechas/asignacion-fechas.component.scss
@@ -11,25 +11,32 @@
     text-align: center;
     color: var(--md-primary-contrast-400);
     background-color: var(--md-primary-400);
-    padding: 10px;
+    padding: 20px;
     border-radius: 10px;
     margin-bottom: 20px;
   }
 
-  .nivel-formacion {
+  .selectors-container {
+    display: flex;
+    justify-content: space-between;
     margin-bottom: 20px;
 
-    label {
-      display: block;
-      margin-bottom: 5px;
-    }
+    .nivel-formacion,
+    .periodo-formacion {
+      width: 48%;
 
-    select {
-      width: 100%;
-      padding: 10px;
-      border: 1px solid var(--md-primary-200);
-      border-radius: 4px;
-      background-color: var(--md-primary-50);
+      label {
+        display: block;
+        margin-bottom: 5px;
+      }
+
+      select {
+        width: 100%;
+        padding: 10px;
+        border: 1px solid var(--md-primary-200);
+        border-radius: 4px;
+        background-color: var(--md-primary-50);
+      }
     }
   }
 
@@ -40,8 +47,20 @@
 
     .fila-procesos {
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       gap: 20px;
+
+      &.fila-1 {
+        .proceso {
+          width: calc(33.33% - 20px); /* Tres procesos en la primera fila */
+        }
+      }
+
+      &.fila-2 {
+        .proceso {
+          width: calc(50% - 20px); /* Dos procesos en la segunda fila */
+        }
+      }
     }
 
     .proceso {
@@ -52,25 +71,50 @@
       text-align: center;
       flex: 1;
 
-      h3 {
-        margin-top: 0;
+      .proceso-header {
+        position: relative;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-bottom: 10px;
         background-color: var(--md-primary-400);
-        color: var(--md-primary-contrast-400);
         padding: 10px;
-        border-radius: 4px;
-      }
+        border-radius: 10px;
 
-      .fechas {
-        margin: 10px 0;
-
-        mat-form-field {
+        .nombre-input {
           width: 100%;
+          border: none;
+          background-color: transparent;
+          text-align: center;
+          font-size: 16px;
+          font-weight: bold;
+          color: var(--md-primary-contrast-400);
         }
 
-        mat-datepicker-toggle {
-          margin-left: -32px; /* Ajuste para colocar el icono al lado derecho del botón */
-          position: relative;
-          right: -8px;
+        .edit-icon {
+          position: absolute;
+          right: 10px;
+          cursor: pointer;
+        }
+      }
+
+      .fechas-container {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+
+        .fechas {
+          flex: 1;
+
+          mat-form-field {
+            width: 100%;
+          }
+
+          mat-datepicker-toggle {
+            margin-left: -32px; /* Ajuste para colocar el icono al lado derecho del botón */
+            position: relative;
+            right: -8px;
+          }
         }
       }
 
@@ -94,7 +138,7 @@
     background-color: var(--md-primary-500);
     color: var(--md-primary-contrast-500);
     border: none;
-    border-radius: 4px;
+    border-radius: 30px;
     cursor: pointer;
     margin-top: 30px;
 
@@ -105,5 +149,61 @@
     mat-icon {
       font-size: 24px;
     }
+  }
+
+  .confirmation {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #000;
+    border: 1px solid var(--md-primary-400);
+    border-radius: 10px;
+    padding: 20px;
+    color: #fff;
+    z-index: 1000;
+
+    .confirmation-content {
+      text-align: center;
+
+      h3 {
+        margin-top: 0;
+        background-color: var(--md-primary-400);
+        color: var(--md-primary-contrast-400);
+        padding: 10px;
+        border-radius: 10px;
+      }
+
+      button {
+        margin-top: 20px;
+      }
+    }
+  }
+
+  .evaluaciones-guardadas {
+    margin-top: 20px;
+    background-color: var(--md-primary-50);
+    padding: 10px;
+    border-radius: 4px;
+
+    p {
+      margin: 0 0 10px;
+      font-weight: bold;
+    }
+
+    ul {
+      padding: 0;
+      list-style: none;
+
+      li {
+        margin: 5px 0;
+      }
+    }
+  }
+
+  .error-message {
+    color: red;
+    text-align: center;
+    margin-top: 20px;
   }
 }
